# metamod-source-plugin

./: README.md  meson.build  meson.options
package/: .vdf.in
src/: meson.build  plugin.cpp  plugin.h  plugin_info.cpp
